--- a/mosaicking-pipeline/example_notebook.ipynb
+++ b/mosaicking-pipeline/example_notebook.ipynb
@@ -20,18 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import eogrow\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
-    "from eogrow.pipelines.download import DownloadPipeline\n",
+    "from pipeline import MosaickingPipeline\n",
+    "\n",
     "from eolearn.core import EOPatch, FeatureType\n",
     "from eolearn.visualization import PlotConfig\n",
     "\n",
-    "from pipeline import MosaickingPipeline"
+    "from eogrow.pipelines.download import DownloadPipeline"
    ]
   },
   {
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +108,8 @@
      "text": [
       "INFO eogrow.core.pipeline:227: Running DownloadPipeline\n",
       "INFO eogrow.utils.ray:24: No Ray cluster found, will not use Ray.\n",
-      "INFO eogrow.core.area.base:108: Loading grid from cache/CustomGridAreaManager_aoi_grid.gpkg\n",
+      "INFO eogrow.core.area.base:108: Loading grid from input-data/aoi_grid.geojson\n",
+      "INFO eogrow.core.area.base:120: Saving grid to cache/CustomGridAreaManager_aoi_grid.gpkg\n",
       "INFO eogrow.utils.ray:24: No Ray cluster found, will not use Ray.\n",
       "INFO eogrow.core.pipeline:177: Starting EOExecutor for 1 EOPatches\n"
      ]
@@ -116,7 +118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:04<00:00,  4.24s/it]"
+      "100%|██████████| 1/1 [00:04<00:00,  4.16s/it]"
      ]
     },
     {
@@ -124,7 +126,7 @@
      "output_type": "stream",
      "text": [
       "INFO eogrow.core.pipeline:199: EOExecutor finished with 1 / 1 success rate\n",
-      "INFO eogrow.core.pipeline:208: Saved EOExecution report to /home/zluksic/Documents/Projects/eo-grow-examples/mosaicking-pipeline/project-data/logs/2023-01-24T12-01-40Z-DownloadPipeline-f335fa9bb4/eoexecution-report-2023_01_24-13_01_40/report.html\n",
+      "INFO eogrow.core.pipeline:208: Saved EOExecution report to /home/zluksic/Documents/Projects/eo-grow-examples/mosaicking-pipeline/project-data/logs/2023-01-24T12-36-03Z-DownloadPipeline-2d8b33ebff/eoexecution-report-2023_01_24-13_36_03/report.html\n",
       "INFO eogrow.core.pipeline:239: Pipeline finished successfully!\n"
      ]
     },
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +170,7 @@
        " datetime.datetime(2019, 3, 10, 8, 3, 53)]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +195,7 @@
        " (<FeatureType.TIMESTAMP: 'timestamp'>, None)]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,12 +222,12 @@
    ],
    "source": [
     "_, axes = plt.subplots(3, 4, figsize=(20, 15))\n",
-    "patch.plot((FeatureType.DATA, \"bands\"), rgb=[2,1,0], config=PlotConfig(rgb_factor=0.00035), axes=axes);"
+    "patch.plot((FeatureType.DATA, \"bands\"), rgb=[2, 1, 0], config=PlotConfig(rgb_factor=0.00035), axes=axes);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,15 +264,8 @@
     "    input_folder_key=\"data\",\n",
     "    output_folder_key=\"median_mosaic\",\n",
     "    bands_feature_name=\"bands\",\n",
-    "    data_preparation=dict(\n",
-    "        cloud_mask_feature_name= \"CLM\",\n",
-    "        valid_data_feature_name= \"dataMask\",\n",
-    "        validity_threshold= 0.5\n",
-    "    ),\n",
-    "    mosaicking=dict(\n",
-    "        time_period=[\"Q1\", 2019],\n",
-    "        n_mosaics=3\n",
-    "    ),\n",
+    "    data_preparation=dict(cloud_mask_feature_name=\"CLM\", valid_data_feature_name=\"dataMask\", validity_threshold=0.5),\n",
+    "    mosaicking=dict(time_period=[\"Q1\", 2019], n_mosaics=3),\n",
     "    output_feature_name=\"mosaicked_bands\",\n",
     ")\n",
     "mean_mosaicking_config.update(managers)\n",
@@ -280,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +292,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  1.11it/s]"
+      "100%|██████████| 1/1 [00:00<00:00,  1.02it/s]"
      ]
     },
     {
@@ -305,7 +300,7 @@
      "output_type": "stream",
      "text": [
       "INFO eogrow.core.pipeline:199: EOExecutor finished with 1 / 1 success rate\n",
-      "INFO eogrow.core.pipeline:208: Saved EOExecution report to /home/zluksic/Documents/Projects/eo-grow-examples/mosaicking-pipeline/project-data/logs/2023-01-24T12-24-44Z-MosaickingPipeline-c57a1a7d83/eoexecution-report-2023_01_24-13_24_44/report.html\n",
+      "INFO eogrow.core.pipeline:208: Saved EOExecution report to /home/zluksic/Documents/Projects/eo-grow-examples/mosaicking-pipeline/project-data/logs/2023-01-24T12-36-12Z-MosaickingPipeline-8900d01a07/eoexecution-report-2023_01_24-13_36_12/report.html\n",
       "INFO eogrow.core.pipeline:239: Pipeline finished successfully!\n"
      ]
     },
@@ -330,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +336,7 @@
        " datetime.datetime(2019, 3, 17, 0, 0)]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +359,7 @@
        " (<FeatureType.TIMESTAMP: 'timestamp'>, None)]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +386,7 @@
    ],
    "source": [
     "_, axes = plt.subplots(1, 3, figsize=(15, 5))\n",
-    "patch.plot((FeatureType.DATA, \"mosaicked_bands\"), rgb=[2,1,0], config=PlotConfig(rgb_factor=0.00035), axes=axes);"
+    "patch.plot((FeatureType.DATA, \"mosaicked_bands\"), rgb=[2, 1, 0], config=PlotConfig(rgb_factor=0.00035), axes=axes);"
    ]
   },
   {
@@ -403,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +427,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  1.76it/s]"
+      "100%|██████████| 1/1 [00:00<00:00,  1.60it/s]"
      ]
     },
     {
@@ -440,7 +435,7 @@
      "output_type": "stream",
      "text": [
       "INFO eogrow.core.pipeline:199: EOExecutor finished with 1 / 1 success rate\n",
-      "INFO eogrow.core.pipeline:208: Saved EOExecution report to /home/zluksic/Documents/Projects/eo-grow-examples/mosaicking-pipeline/project-data/logs/2023-01-24T12-27-34Z-MosaickingPipeline-fcd6b33af9/eoexecution-report-2023_01_24-13_27_34/report.html\n",
+      "INFO eogrow.core.pipeline:208: Saved EOExecution report to /home/zluksic/Documents/Projects/eo-grow-examples/mosaicking-pipeline/project-data/logs/2023-01-24T12-36-14Z-MosaickingPipeline-6bb6ba8acb/eoexecution-report-2023_01_24-13_36_14/report.html\n",
       "INFO eogrow.core.pipeline:239: Pipeline finished successfully!\n"
      ]
     },
@@ -458,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +464,7 @@
        " datetime.datetime(2019, 3, 17, 0, 0)]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -492,18 +487,18 @@
        " (<FeatureType.TIMESTAMP: 'timestamp'>, None)]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "patch.get_features()  #NDVI is not included, one can obtain it via `ndis` parameter of pipeline"
+    "patch.get_features()  # NDVI is not included, one can obtain it via `ndis` parameter of pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +514,7 @@
    ],
    "source": [
     "_, axes = plt.subplots(1, 3, figsize=(15, 5))\n",
-    "patch.plot((FeatureType.DATA, \"mosaicked_bands\"), rgb=[2,1,0], config=PlotConfig(rgb_factor=0.00035), axes=axes);"
+    "patch.plot((FeatureType.DATA, \"mosaicked_bands\"), rgb=[2, 1, 0], config=PlotConfig(rgb_factor=0.00035), axes=axes);"
    ]
   },
   {
