--- a/GEM_Workshop/LC_CMS_Workshop/notebook/LC-CMS_Workshop.ipynb
+++ b/GEM_Workshop/LC_CMS_Workshop/notebook/LC-CMS_Workshop.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cbb15b68-4e77-44ec-a2b0-36c44a8845b9",
    "metadata": {
@@ -161,7 +160,6 @@
     "import os\n",
     "\n",
     "import joblib\n",
-    "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import rasterio\n",
@@ -348,7 +346,8 @@
     "# We can use the EOPatch.load function to load the data. We can always use lazy_loading when we want to.\n",
     "eopatch = EOPatch.load(eopatch_path)  # , lazy_loading=True)\n",
     "\n",
-    "# The following functions prints the visual bands (B2, B3, B4 <-> (blue, green, red)) for the selected EOPatch for the aggreegated six months of the year.\n",
+    "# The following functions prints the visual bands (B2, B3, B4 <-> (blue, green, red))\n",
+    "# for the selected EOPatch for the aggreegated six months of the year.\n",
     "# Please go ahead and try printing this for different EOPatches\n",
     "fig, axes = plt.subplots(2, 3, figsize=(20, 15))\n",
     "# fig.set_size_inches((8, 8))\n",
@@ -358,7 +357,7 @@
     "    ax.set_yticks([])\n",
     "    ax.set_title(f\"Month {2*i+1} & {2*i+2} /2020\")\n",
     "\n",
-    "##Go back and generate this for a different tile"
+    "# Go back and generate this for a different tile"
    ]
   },
   {
@@ -509,7 +508,7 @@
    "source": [
     "# Now, plot the distribution to have a better picture\n",
     "%matplotlib inline\n",
-    "target_names = [LABELS_ORIG[l] for l in label_distribution[0]]\n",
+    "target_names = [LABELS_ORIG[label] for label in label_distribution[0]]\n",
     "ax = sns.barplot(y=label_distribution[1], x=target_names, orient=\"v\")\n",
     "ax.set(title=\"Pixels distribution of available LC Classes\", ylabel=\"Pixels\", xlabel=\"LC classes\")\n",
     "ax.bar_label(ax.containers[0], labels=label_distribution[1])\n",
@@ -679,7 +678,8 @@
     }
    ],
    "source": [
-    "# We can also have a look at the Feature Importance matrix to see which features player more significant role while predicting\n",
+    "# We can also have a look at the Feature Importance matrix\n",
+    "# to see which features player more significant role while predicting\n",
     "%matplotlib inline\n",
     "y_labels = [f\"T{i}\" for i in range(1, (len(model.feature_importances_) // len(INPUT_BANDS)) + 1)]\n",
     "ax = sns.heatmap(\n",
@@ -728,7 +728,7 @@
     "%matplotlib inline\n",
     "val_proba = model.predict_proba(val_data)\n",
     "\n",
-    "display_labels = [LABELS_ORIG[l] for l in label_distribution[0]]\n",
+    "display_labels = [LABELS_ORIG[label] for label in label_distribution[0]]\n",
     "plt.plot([0, 1], [0, 1], linestyle=\"--\", label=\"Base\")\n",
     "for i in range(4):\n",
     "    fpr, tpr, thresholds = roc_curve(label_encoder.transform(val_labels), val_proba[:, i], pos_label=i)\n",
@@ -882,7 +882,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First, change the project_dir in the global configuration to the new 2021 project_dir that we want to perform the run for.\n",
+    "# First, change the project_dir in the global configuration to the new 2021 project_dir.\n",
     "# Also, change the RUN_DIR so that everything is referenced properly\n",
     "RUN_DIR = \"/gem-workshop/lccms_rundir/paris_run/2021\""
    ]
@@ -1029,7 +1029,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
